use interceptor and strict body type validation
